# tuya-everything-app

./: .gitignore  LICENSE  README-lain.md  README.md  README_zh.md  example  example.txt
.agent/rules/: auto-commit-push-workflow.md  no-auto-start-dev-server.md  ui-color-prefer-non-purple-primary.md  use-bun-package-manager.md
.agent/workflows/: GIT-PUSH-AUTO.md
.cursor/commands/: auto-commit-push.md
.cursor/rules/: auto-commit-push-workflow.mdc  no-auto-start-dev-server.mdc  shell-preferences.mdc  ui-color-prefer-non-purple-primary.mdc  use-bun-package-manager.mdc
.kiro/hooks/: git-commit-auto.kiro.hook
.kiro/steering/: auto-commit-push-workflow.md  no-auto-start-dev-server.md  ui-color-prefer-non-purple-primary.md  use-bun-package-manager.md
1-devkit/: .env.example  CMakeLists.txt
1-devkit/src/: alert_audio_data.h  ble_config.c  ble_config.h  g711_codec.c  g711_codec.h  mic_streaming.c  speaker_streaming.c  speaker_streaming.h  tcp_client.c  tcp_client.h  tuya_config.h  tuya_main.c  udp_audio.c  udp_audio.h
2-webapp/: .env.production  .gitignore  Dockerfile  go.mod  main.go
2-webapp/public/: index.html  login.html
3-plan/: AUDIO_STREAMING_GUIDE.md  INVESTIGATION_SUMMARY.md  RTSP_TCP_TUNNEL_PLAN.md  T5AI_Smart_Doorbell_Project_Plan.md  g711.md  mic_fix.md  pcm.md  sound-quality-fix.md  speaker-streaming-files.md  speaker-streaming.md  t5ai-two-way-audio.md  two-way.md
4-ai-context/: 1.md  10.md  11.md  12.md  13.md  14.md  15.md  16.md  17.md  18.md  19.md  2.md  20.md  21.md  23.md  24.md  25.md  26.md  27.md  28.md  29.md  3.md  4.md  5.md  6.md  7.md  8.md  9.md
apps/factory_reset/: CMakeLists.txt  README.md
apps/factory_reset/src/: tuya_config.h  tuya_main.c
apps/tuya.ai/ai_components/ai_audio/src/: ai_audio_player.c
apps/tuya.ai/your_chat_bot/: app_default.config
apps/tuya.ai/your_chat_bot/src/: app_chat_bot.c  app_system_info.c  tuya_main.c
apps/tuya_cloud/object_detection/: .env.example  CMakeLists.txt  build_with_env.fish
apps/tuya_cloud/object_detection/android/: .gitignore  README.md  build.sh  gradlew  settings.gradle.kts
apps/tuya_cloud/object_detection/android/app/: build.gradle.kts
apps/tuya_cloud/object_detection/android/app/src/main/: AndroidManifest.xml
apps/tuya_cloud/object_detection/android/app/src/main/java/com/tuya/persondetector/: Config.kt  MainActivity.kt  TuyaApi.kt
apps/tuya_cloud/object_detection/android/app/src/main/res/layout/: activity_main.xml
apps/tuya_cloud/object_detection/android/app/src/main/res/values/: colors.xml  strings.xml  themes.xml
apps/tuya_cloud/object_detection/src/: alert_audio_data.c  ble_config.c  ble_config.h  cli_cmd.c  mic_streaming.c  mic_streaming.h  speaker_streaming.c  speaker_streaming.h  tcp_client.c  tcp_client.h  tuya_config.h  tuya_main.c  udp_audio.c  udp_audio.h
apps/tuya_cloud/switch_demo/: .env.example  app_default.config  build_with_env.fish
apps/tuya_cloud/switch_demo/src/: tuya_main.c
apps/tuya_t5_pocket/tuya_t5_pocket_ai/src/: game_pet.c
apps/tuya_t5_pocket/tuya_t5_pocket_ai/src/display/ducky/: ducky_game.c
apps/tuya_t5_pocket/tuya_t5_pocket_ai/src/display/icons/: menu_scan_icon.c  peripherals_scan_left_icon.c  peripherals_scan_right_icon.c
apps/tuya_t5_pocket/tuya_t5_pocket_ai/src/display/ui/: ai_pocket_pet_app.c  ai_pocket_pet_app.h  dino_game.c  dino_game.h  level_indicator.c  level_indicator.h  menu_system.c  menu_system.h  peripherals_scan.c  peripherals_scan.h  snake_game.c  snake_game.h
ble-config-web/: index.html  package.json  tuya-ble-crypto.js
boards/Ubuntu/: CMakeLists.txt  Kconfig  board_com_api.c  board_com_api.h  keyboard_input.c  keyboard_input.h
docs/: ai_audio.md  audio_driver.md  mediabunny-llms.txt
examples/ble/ble_peripher/src/: example_ble_peripheral.c
examples/peripherals/touch/src/: example_touch.c
examples/wifi/sta/src/: example_wifi_sta.c
explainer-video/: TRANSCRIPT.md  package.json  tsconfig.json
explainer-video/src/: Root.tsx  SmartDoorbellExplainer.tsx
plan/: RTSP_TCP_TUNNEL_PLAN.md  T5AI_Smart_Doorbell_Project_Plan.md  TUYA_PANEL_MINIAPP_GUIDE.md  VPS_TTS_TUNNEL_PLAN.md  audio-quality-fix-walkthrough.md  audio-streaming-fix.md  mic_fix.md  pcm.md  speaker-streaming.md  websocket.md
platform/: platform_config.yaml
src/libhttp/src/: http_download.c
src/liblvgl/v9/conf/: lv_conf.h
src/peripherals/audio_codecs/: Kconfig
src/peripherals/audio_codecs/tdd_audio/include/: tdd_audio_alsa.h
src/peripherals/audio_codecs/tdd_audio/src/: tdd_audio_alsa.c
src/peripherals/leds_pixel/tdd_leds_pixel/src/: tdd_pixel_sm16703p_opt.c  tdd_pixel_ws2812_opt.c
src/peripherals/leds_pixel/tdl_leds_pixel_manage/src/: tdl_pixel_dev_manage.c
src/tal_kv/src/: storage_wrapper.c
src/tal_system/src/: tal_log.c
src/tuya_ai_basic/include/: tuya_ai_protocol.h
src/tuya_ai_basic/src/: tuya_ai_protocol.c
src/tuya_cloud_service/ble/: ble_dp.c  ble_mgr.c
src/tuya_cloud_service/cloud/: iotdns.c  matop_service.c  mqtt_bind.c  mqtt_service.c  tuya_endpoint.c  tuya_http.c  tuya_iot.c  tuya_ota.c
src/tuya_cloud_service/netcfg/: ap_netcfg.c
src/tuya_cloud_service/netmgr/: netconn_wifi.c  netmgr.c
src/tuya_cloud_service/schema/: dp_schema.c
tools/porting/adapter/utilities/include/: tuya_ringbuf.h
webapp/: .env.example  .gitignore  Dockerfile  docker-compose.yml  go.mod  go.sum  main.go  package.json  rtp_receiver.js  rtsp_relay.js  server.js
webapp/public/: index.html
webapp/public/ble/: index.html
